smart-lock/tests/ui/non_send_field.stderr
error[E0277]: `Rc<u32>` cannot be sent between threads safely
 --> tests/ui/non_send_field.rs:5:8
  |
5 | struct Bad {
  |        ^^^ `Rc<u32>` cannot be sent between threads safely
  |
  = help: the trait `Send` is not implemented for `Rc<u32>`
  = note: required for `smart_lock::RwLock<Rc<u32>>` to implement `Send`
note: required because it appears within the type `BadLock`
 --> tests/ui/non_send_field.rs:5:8
  |
5 | struct Bad {
  |        ^^^
note: required by a bound in `_require_send_sync`
 --> tests/ui/non_send_field.rs:4:1
  |
4 | #[smart_lock]
  | ^^^^^^^^^^^^^ required by this bound in `_require_send_sync`
  = note: this error originates in the attribute macro `smart_lock` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Rc<u32>` cannot be shared between threads safely
 --> tests/ui/non_send_field.rs:5:8
  |
5 | struct Bad {
  |        ^^^ `Rc<u32>` cannot be shared between threads safely
  |
  = help: the trait `Sync` is not implemented for `Rc<u32>`
  = note: required for `smart_lock::RwLock<Rc<u32>>` to implement `Sync`
note: required because it appears within the type `BadLock`
 --> tests/ui/non_send_field.rs:5:8
  |
5 | struct Bad {
  |        ^^^
note: required by a bound in `_require_send_sync`
 --> tests/ui/non_send_field.rs:4:1
  |
4 | #[smart_lock]
  | ^^^^^^^^^^^^^ required by this bound in `_require_send_sync`
  = note: this error originates in the attribute macro `smart_lock` (in Nightly builds, run with -Z macro-backtrace for more info)
