smart-lock/tests/ui/non_send_field.rs
use smart_lock::smart_lock;
use std::rc::Rc;

#[smart_lock]
struct Bad {
    data: Rc<u32>,
}

fn main() {}
